--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==2.1.2
 mypy-extensions==0.4.3
 pathspec==0.11.0
 platformdirs==2.6.2
+psycopg2-binary==2.9.6
 SQLAlchemy==2.0.0
 typing_extensions==4.4.0
 visitor==0.1.3
